résolution du bug au niveau du z-index pour la section projets

--- a/public/src/style/style.css
+++ b/public/src/style/style.css
@@ -239,6 +239,7 @@ section {
   flex-direction: column;
   justify-content: center;
   row-gap: 20px;
+  z-index: -10;
 }
 
 #presentationSection,
@@ -385,7 +386,6 @@ section {
   flex-direction: column;
   justify-content: center;
   row-gap: 20px;
-  z-index: -1;
 }
 
 .swiper {
